# scipl

./: .gitignore  README.md  pyproject.toml
scipl/: __main__.py
